--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"description": "",
 	"scripts": {
 		"build": "webpack --mode production",
-		"serve": "webpack serve --open",
 		"start": "node server.js"
 	},
 	"author": "swayam shree sharma",
@@ -15,16 +14,12 @@
 		"express": "^4.17.3",
 		"js-cookie": "^3.0.1",
 		"p5": "^1.4.1",
-		"peerjs": "^1.3.2",
-		"simple-peer": "^9.11.1",
-		"socket.io": "^4.4.1",
-		"wrtc": "^0.4.7"
+		"socket.io": "^4.4.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15",
 		"process": "^0.11.10",
 		"webpack": "^5.72.0",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.8.1"
+		"webpack-cli": "^4.9.2"
 	}
 }
